# pektin-server

./: .env  .gitlab-ci.yml  Cargo.toml  Dockerfile  dev.Dockerfile  docker-compose.yml  readme.md
src/: doh.rs  json_test.rs  lib.rs  main.rs  persistence.rs  redis.rs  resource_record.rs
