[package]
edition = "2021"
name = "pektin-server"
version = "0.1.0"

[dependencies]
actix-cors = "0.6"
actix-web = "4.0"
data-encoding = "2.3"
dotenv = "0.15"
env_logger = "0.9"
futures-util = "0.3"
parking_lot = "0.12"
pektin-common = { git = "https://github.com/pektin-dns/pektin-common", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.12", features = ["full"] }
trust-dns-server = "0.21"
url = { version = "2.2", features = ["serde"] }

[lib]
name = "pektin_server"
path = "src/lib.rs"

[[bin]]
name = "pektin_server"
path = "src/main.rs"

[[bin]]
name = "json_test"
path = "src/json_test.rs"
