[package]
edition = "2021"
name = "pektin-server"
version = "0.1.0"

[dependencies]
actix-cors = "0.6"
actix-web = "4.0"
chrono = "0.4"
data-encoding = "2.3"
env_logger = "0.9"
futures-util = "0.3"
log = { version = "0.4", features = ["release_max_level_warn"] }
parking_lot = "0.12"
pektin-common = { git = "https://github.com/pektin-dns/pektin-common", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.12", features = ["full"] }
trust-dns-server = "0.21"
url = { version = "2.2", features = ["serde"] }

[lib]
name = "pektin_server"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"



[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "abort"
rpath = false
